--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1384,8 +1384,8 @@ ul.get-more-questions-menu {
                 }
             }
             #question-nav {
-                margin: 25px 0 12px;
-                width: 100%;
+                margin: 25px 0 12px 6px;
+                width: 98%;
                 &.closed {
                     background: none;
                     border: 0;
